--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
+  "python.linting.pylintEnabled": false,
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
   "python.formatting.provider": "black",
-  "python.formatting.blackArgs": ["--line-length", "75"],
+  "python.formatting.blackArgs": ["--line-length", "79"],
   "editor.formatOnSave": true,
   "[python]": {
     "editor.defaultFormatter": "ms-python.python",
